--- a/index.html
+++ b/index.html
@@ -191,10 +191,20 @@
       </section>
 
       <footer class="app__footer">
-        <span>Dados salvos localmente no navegador</span>
-        <button class="button button--ghost" type="button" data-clear-grades>
-          Limpar avaliações
-        </button>
+        <span>Projeto Desenvolvido por Matheus Siqueira</span>
+        <div class="footer__actions">
+          <button class="button button--ghost" type="button" data-clear-grades>
+            Limpar avaliações
+          </button>
+          <a
+            class="button button--primary"
+            href="https://www.matheussiqueira.dev"
+            target="_blank"
+            rel="noopener"
+          >
+            Portfólio
+          </a>
+        </div>
       </footer>
     </main>
 
